# Cnipe-Bot

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  clean-build.sh  clean_build.bat  run.sh  test_db.sql
.cache/clangd/index/: appcommand.cpp.A01E30B4BED9989C.idx  appcommand.h.BB429061284AFFA0.idx  application.cpp.D612223E2E93FC84.idx  application.h.4F2AC47D9552AF7E.idx  auditlog.cpp.120B0F698C5F6251.idx  auditlog.h.0781FE72DE2A02D8.idx  automod.cpp.EEF61C401E028603.idx  automod.cpp.F91AEE47C3FA1A56.idx  automod.h.59921E9A3F1A7FC6.idx  automod_rule_create.cpp.467A6080570F66C8.idx  automod_rule_delete.cpp.4E992B749F017DD3.idx  automod_rule_execute.cpp.B200BB2C3775449D.idx  automod_rule_update.cpp.86F8BD12E2023F7B.idx  ban.cpp.1D4E0D0C94B38DA5.idx  ban.h.C24B7C404912A974.idx  cache.cpp.8E855966BF19D62F.idx  cache.h.146ECE1B02A79ABE.idx  channel.cpp.C13451BAAF9C9B9E.idx  channel.cpp.CA48991AF89552DE.idx  channel.h.5D1F80E14BFAA5D8.idx  channel_create.cpp.FE8D0B882D4DA5C3.idx  channel_delete.cpp.03EE94CD8F7EBA54.idx  channel_pins_update.cpp.EF96F08AB0BE85A1.idx  channel_update.cpp.1BF81AF6DDD06121.idx  cluster.cpp.1E5E11664E32D470.idx  cluster.h.39E43081D04A8731.idx  cluster_sync_calls.cpp.FBE140B0CA7C00CD.idx  colors.h.A634DAA1EC8BED63.idx  (+160 more)
.github/workflows/: ci.yml  update.yml
MyBot/: MyBot.vcxproj  MyBot.vcxproj.filters  cnipe.cpp  json.h
scripts/: clean_build.sh
src/: a.out  commands.cpp  connection.cpp  connector_init.cpp  database.cpp  db_connection.cpp  events.cpp  main.cpp  main.h  utils.cpp
src/headers/: Config.h
src/include/: cnipe_bot.h  commands.h  connector.h  database.h  db_connection.h  events.h  main.h  utils.h
src/sql/: test_db.sql
